k8s/istio-virtualservice/n8n-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: n8n-virtualservice
  namespace: n8n
  labels:
    app.kubernetes.io/name: 'n8n'
    app.kubernetes.io/env: 'dev'
    app.kubernetes.io/version: 'latest'
    app.kubernetes.io/part-of: 'n8n'
spec:
  hosts:
  - "n8n.ginga.dev.br"
  gateways:
  - n8n-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: n8n-service-deployment.n8n.svc.cluster.local
        port:
          number: 80
